// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video is not playing  1`] = `
<div
  className="player-interface"
>
  <div
    className="player-interface__top"
  >
    <button
      className="player-interface__back-button selected"
    >
      <img
        alt="Back"
        className="player-interface__navigation-icons player-interface__navigation-icons--back"
        src="Square-Arrow.svg"
      />
    </button>
    <span
      className="player-interface__episode-title"
    >
      Whatever
    </span>
  </div>
  <div
    className="player-interface__bottom"
  >
    <div
      className="player-interface__progress-time"
    >
      <div
        className="player-interface__progress-time--current"
      >
        10:10
      </div>
      <div
        className="player-interface__progress-time--final"
      >
        20:20
      </div>
    </div>
    <div
      className="player-interface__progress-bar-container"
    >
      <div
        className="player-interface__progress-bar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      className="player-interface__navigation-wrapper"
    >
      <button
        className="player-interface__navigation-control selected"
      >
        <img
          alt="left"
          className="player-interface__navigation-icons player-interface__navigation-icons--rewind"
          id="1"
          src="RW.svg"
        />
      </button>
      <button
        className="player-interface__navigation-control"
      >
        <img
          alt="Play/Pause"
          className="player-interface__navigation-icons player-interface__navigation-icons--play"
          id="2"
          src="Play.svg"
        />
      </button>
      <button
        className="player-interface__navigation-control"
      >
        <img
          alt="right"
          className="player-interface__navigation-icons player-interface__navigation-icons--forward"
          id="3"
          src="FF.svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Video is playing + selected postition is 0 1`] = `
<div
  className="player-interface"
>
  <div
    className="player-interface__top"
  >
    <button
      className="player-interface__back-button selected"
    >
      <img
        alt="Back"
        className="player-interface__navigation-icons player-interface__navigation-icons--back"
        src="Square-Arrow.svg"
      />
    </button>
    <span
      className="player-interface__episode-title"
    >
      Whatever
    </span>
  </div>
  <div
    className="player-interface__bottom"
  >
    <div
      className="player-interface__progress-time"
    >
      <div
        className="player-interface__progress-time--current"
      >
        10:10
      </div>
      <div
        className="player-interface__progress-time--final"
      >
        20:20
      </div>
    </div>
    <div
      className="player-interface__progress-bar-container"
    >
      <div
        className="player-interface__progress-bar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      className="player-interface__navigation-wrapper"
    >
      <button
        className="player-interface__navigation-control selected"
      >
        <img
          alt="left"
          className="player-interface__navigation-icons player-interface__navigation-icons--rewind"
          id="1"
          src="RW.svg"
        />
      </button>
      <button
        className="player-interface__navigation-control"
      >
        <img
          alt="Play/Pause"
          className="player-interface__navigation-icons player-interface__navigation-icons--pause"
          id="2"
          src="Pause.svg"
        />
      </button>
      <button
        className="player-interface__navigation-control"
      >
        <img
          alt="right"
          className="player-interface__navigation-icons player-interface__navigation-icons--forward"
          id="3"
          src="FF.svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Video is playing + selected postition is 1 1`] = `
<div
  className="player-interface"
>
  <div
    className="player-interface__top"
  >
    <button
      className="player-interface__back-button selected"
    >
      <img
        alt="Back"
        className="player-interface__navigation-icons player-interface__navigation-icons--back"
        src="Square-Arrow.svg"
      />
    </button>
    <span
      className="player-interface__episode-title"
    >
      Whatever
    </span>
  </div>
  <div
    className="player-interface__bottom"
  >
    <div
      className="player-interface__progress-time"
    >
      <div
        className="player-interface__progress-time--current"
      >
        10:10
      </div>
      <div
        className="player-interface__progress-time--final"
      >
        20:20
      </div>
    </div>
    <div
      className="player-interface__progress-bar-container"
    >
      <div
        className="player-interface__progress-bar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      className="player-interface__navigation-wrapper"
    >
      <button
        className="player-interface__navigation-control"
      >
        <img
          alt="left"
          className="player-interface__navigation-icons player-interface__navigation-icons--rewind"
          id="1"
          src="RW.svg"
        />
      </button>
      <button
        className="player-interface__navigation-control selected"
      >
        <img
          alt="Play/Pause"
          className="player-interface__navigation-icons player-interface__navigation-icons--pause"
          id="2"
          src="Pause.svg"
        />
      </button>
      <button
        className="player-interface__navigation-control"
      >
        <img
          alt="right"
          className="player-interface__navigation-icons player-interface__navigation-icons--forward"
          id="3"
          src="FF.svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Video is playing + selected postition is 2 1`] = `
<div
  className="player-interface"
>
  <div
    className="player-interface__top"
  >
    <button
      className="player-interface__back-button selected"
    >
      <img
        alt="Back"
        className="player-interface__navigation-icons player-interface__navigation-icons--back"
        src="Square-Arrow.svg"
      />
    </button>
    <span
      className="player-interface__episode-title"
    >
      Whatever
    </span>
  </div>
  <div
    className="player-interface__bottom"
  >
    <div
      className="player-interface__progress-time"
    >
      <div
        className="player-interface__progress-time--current"
      >
        10:10
      </div>
      <div
        className="player-interface__progress-time--final"
      >
        20:20
      </div>
    </div>
    <div
      className="player-interface__progress-bar-container"
    >
      <div
        className="player-interface__progress-bar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      className="player-interface__navigation-wrapper"
    >
      <button
        className="player-interface__navigation-control"
      >
        <img
          alt="left"
          className="player-interface__navigation-icons player-interface__navigation-icons--rewind"
          id="1"
          src="RW.svg"
        />
      </button>
      <button
        className="player-interface__navigation-control"
      >
        <img
          alt="Play/Pause"
          className="player-interface__navigation-icons player-interface__navigation-icons--pause"
          id="2"
          src="Pause.svg"
        />
      </button>
      <button
        className="player-interface__navigation-control selected"
      >
        <img
          alt="right"
          className="player-interface__navigation-icons player-interface__navigation-icons--forward"
          id="3"
          src="FF.svg"
        />
      </button>
    </div>
  </div>
</div>
`;
